--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,7 @@
-VITE_API_URL=http://localhost:8000/api
-VUE_APP_PUSHER_APP_KEY=your-pusher-key
-VUE_APP_PUSHER_APP_CLUSTER=mt1
+VITE_API_BASE_URL=http://localhost:8000/api
+
+# Pusher config
+VITE_PUSHER_APP_KEY=54d01583daea6c80ca52
+VITE_PUSHER_APP_CLUSTER=mt1
+VITE_PUSHER_APP_ID=2029231
+VITE_PUSHER_APP_SECRET=7efbb9198e5b12ec5105
